# ffmpeg-practices

./: .gitignore  CMakeLists.txt  README.md  TODO.md
00.common/ffmpeg-4.3.2/: CMakeLists.txt  config.h  configure
00.common/ffmpeg-4.3.2/doc/: config.texi
00.common/ffmpeg-4.3.2/ffbuild/: config.fate  config.mak  config.sh
00.common/ffmpeg-4.3.2/libavcodec/: 8svx.c  ac3dsp.h  bink.c  codec.h  codec_list.c  diracdec.c  diracdsp.h  eatgv.c  h264pred_template.c  hevcpred_template.c  ivi.c  lagarith.c  lcldec.c  mjpegdec.c  mpegaudiodec_template.c  packet.h  pcm.c  proresenc_anatoliy.c  psd.c  put_bits.h  snow.h  snowdec.c  snowenc.c  tiffenc.c  vc1dsp.c  videotoolboxenc.c  vp8.c  yop.c  zmbvenc.c
00.common/ffmpeg-4.3.2/libavcodec/aarch64/: h264cmc_neon.S  vp9itxfm_16bpp_neon.S  vp9itxfm_neon.S  vp9mc_16bpp_neon.S  vp9mc_neon.S
00.common/ffmpeg-4.3.2/libavcodec/arm/: h264cmc_neon.S  hevcdsp_sao_neon.S
00.common/ffmpeg-4.3.2/libavcodec/mips/: aacdec_mips.c  fmtconvert_mips.c  h264chroma_mmi.c  h264dsp_mmi.c  h264pred_mmi.c  h264qpel_mmi.c  hevc_lpf_sao_msa.c  hevcdsp_mmi.c  simple_idct_mmi.c  vc1dsp_mmi.c  vp8dsp_mmi.c  vp9_mc_mmi.c
00.common/ffmpeg-4.3.2/libavcodec/ppc/: h264dsp.c  lossless_videodsp_altivec.c  mpegvideodsp.c
00.common/ffmpeg-4.3.2/libavcodec/tests/: options.c
00.common/ffmpeg-4.3.2/libavcodec/x86/: aacpsdsp.asm  ac3dsp.asm  audiodsp.asm  bswapdsp.asm  diracdsp.asm  exrdsp.asm  fmtconvert.asm  h263_loopfilter.asm  h264_chromamc.asm  h264_chromamc_10bit.asm  h264_intrapred.asm  h264_intrapred_10bit.asm  h264_qpel_10bit.asm  h264_qpel_8bit.asm  h264_weight.asm  h264_weight_10bit.asm  hevc_mc.asm  hevc_sao.asm  huffyuvdsp.asm  lossless_videodsp.asm  lossless_videoencdsp.asm  mpegvideodsp.c  mpegvideoencdsp_init.c  rv40dsp.asm  simple_idct10_template.asm  v210.asm  vc1dsp_loopfilter.asm  vc1dsp_mc.asm  vc1dsp_mmx.c  videodsp.asm  vp6dsp.asm  vp8dsp.asm  vp9intrapred_16bpp.asm  vp9itxfm.asm  vp9itxfm_16bpp.asm  vp9lpf.asm  (+3 more)
00.common/ffmpeg-4.3.2/libavfilter/: vf_colormatrix.c  vf_delogo.c  vf_deshake_opencl.c  vf_fieldmatch.c  vf_nlmeans.c  vf_nnedi.c  vf_overlay.c  vf_rotate.c  vf_tinterlace.c  vf_xbr.c
00.common/ffmpeg-4.3.2/libavformat/: rtpdec_h263_rfc2190.c
00.common/ffmpeg-4.3.2/libavresample/: audio_data.c  audio_data.h  dither.h
00.common/ffmpeg-4.3.2/libavutil/: aes.h  avstring.h  camellia.h  cast5.h  fifo.c  frame.h  hwcontext.c  hwcontext_internal.h  imgutils.h  murmur3.h  opt.h  tea.h  twofish.h  xtea.h
00.common/ffmpeg-4.3.2/libpostproc/: postprocess.c  postprocess_altivec_template.c  postprocess_template.c
00.common/ffmpeg-4.3.2/libswscale/: gamma.c  input.c  slice.c  swscale.c  swscale_internal.h  utils.c
00.common/ffmpeg-4.3.2/tools/: ffescape.c  ismindex.c  zmqsend.c
01.av_log/: CMakeLists.txt  Makefile  main.cpp
02.print_metadata/: CMakeLists.txt  Makefile  main.cpp
03.demux_audio_to_aac/: CMakeLists.txt  Makefile  README.md  main.cpp
04.demux_video_to_h264/: CMakeLists.txt  README.md  main.cpp
05.remux_mp4_to_flv/: CMakeLists.txt  README.md  main.cpp
06.time_stamp/: CMakeLists.txt  README.md  main.cpp
07.cut_stream/: CMakeLists.txt  README.md  main.cpp
08.decode_video_to_yuv/: CMakeLists.txt  README.md  main.cpp
09.decode_video_scale_to_yuv/: CMakeLists.txt  README.md  main.cpp
10.decode_video_scale_to_rgb/: CMakeLists.txt  README.md  main.cpp
11.decode_video_scale_save_to_bmp/: CMakeLists.txt  README.md  main.cpp
12.encode_video_yuv_to_h264/: CMakeLists.txt  README.md  main.cpp
13.decode_audio_aac_to_pcm/: CMakeLists.txt  README.md  main.cpp
14.encode_audio_pcm_to_aac/: CMakeLists.txt  README.md  main.cpp
15.capture_video_to_origin/: CMakeLists.txt  README.md  main.cpp
16.capture_video_to_yuv420/: CMakeLists.txt  main.cpp
17.capture_audio_to_pcm/: CMakeLists.txt  README.md  main.cpp
23.audio_record_and_resample/: CMakeLists.txt  README.md  main.cpp
24.capture_video_to_nv12/: CMakeLists.txt  main.cpp
25.capture_audio_to_aac_and_encode/: CMakeLists.txt  main.cpp
26.capture_video_to_nv12_and_encode/: CMakeLists.txt  main.cpp
27.rtmp_push_stream/: CMakeLists.txt  main.cpp
practices/: API_INDEX.md  CMakeLists.txt  Makefile  README.md  generate_test_media.sh
practices/00.common/: README.md
practices/01.open/: CMakeLists.txt  README.md  main.cpp
practices/02.streams/: CMakeLists.txt  README.md  main.cpp
practices/03.packets/: CMakeLists.txt  README.md  main.cpp
practices/04.metadata/: CMakeLists.txt  README.md  main.cpp
practices/05.demux_audio/: CMakeLists.txt  README.md  main.cpp
practices/06.demux_video_annexb/: CMakeLists.txt  README.md  main.cpp
practices/07.remux/: CMakeLists.txt  README.md  main.cpp
practices/08.cut/: CMakeLists.txt  README.md  main.cpp
practices/09.decode_video_frame/: CMakeLists.txt  README.md  main.cpp
practices/10.decode_video_yuv/: CMakeLists.txt  README.md  main.cpp
practices/11.decode_audio_pcm/: CMakeLists.txt  README.md  main.cpp
practices/12.timestamp_deep/: CMakeLists.txt  README.md  main.cpp
practices/13.scale/: CMakeLists.txt  README.md  main.cpp
practices/14.encode_video/: CMakeLists.txt  README.md  main.cpp
practices/15.encode_audio/: CMakeLists.txt  README.md  main.cpp
practices/16.resample_audio/: CMakeLists.txt  README.md  main.cpp
practices/17.transcode_video/: CMakeLists.txt  README.md  main.cpp
practices/18.transcode_full/: CMakeLists.txt  README.md  main.cpp
practices/19.encode_params/: CMakeLists.txt  README.md  main.cpp
practices/20.pixel_convert/: CMakeLists.txt  README.md  main.cpp
practices/21.filter_graph/: CMakeLists.txt  README.md  main.cpp
practices/22.custom_io/: CMakeLists.txt  README.md  main.cpp
practices/23.demux_video_raw/: CMakeLists.txt  README.md  main.cpp
practices/24.multi_output/: CMakeLists.txt  README.md  main.cpp
practices/25.mini_player/: CMakeLists.txt  README.md  main.cpp
practices/26.screen_capture/: CMakeLists.txt  README.md  main.cpp
practices/27.custom_filter/: CMakeLists.txt  README.md  main.cpp
practices/28.hw_decode/: CMakeLists.txt  README.md  main.cpp
(+240 files in other folders)
