cmake_minimum_required(VERSION 3.2)
project(streaming_media_practice)
link_directories(./00.common/lib)
include_directories(./00.common/include)

add_subdirectory(00.common)
add_subdirectory(01.av_log)
add_subdirectory(02.print_metadata)
add_subdirectory(03.demux_audio_to_aac)
add_subdirectory(04.demux_video_to_h264)
add_subdirectory(05.remux_mp4_to_flv)
add_subdirectory(06.time_stamp)
add_subdirectory(07.cut_stream)
add_subdirectory(08.decode_video_to_yuv)
add_subdirectory(09.decode_video_scale_to_yuv)
add_subdirectory(10.decode_video_scale_to_rgb)
add_subdirectory(11.decode_video_scale_save_to_bmp)
add_subdirectory(12.encode_video_yuv_to_h264)
add_subdirectory(13.decode_audio_aac_to_pcm)
add_subdirectory(14.encode_audio_pcm_to_aac)
add_subdirectory(15.capture_video_to_origin)
add_subdirectory(16.capture_video_to_yuv420)
add_subdirectory(17.capture_audio_to_pcm)
add_subdirectory(18.sdl_display_example)
add_subdirectory(19.sdl_display_bmp)
add_subdirectory(20.sdl_display_by_texture)
add_subdirectory(21.sdl_display_yuv)
add_subdirectory(22.sdl_display_pcm)
add_subdirectory(23.audio_record_and_resample)
add_subdirectory(24.capture_video_to_nv12)
add_subdirectory(25.capture_audio_to_aac_and_encode)
add_subdirectory(26.capture_video_to_nv12_and_encode)
add_subdirectory(27.rtmp_push_stream)